--- a/src/app/component/dashboard/home/home.component.html
+++ b/src/app/component/dashboard/home/home.component.html
@@ -1,5 +1,3 @@
 <app-header></app-header>
-<div class="main-content">
-  <app-home-body></app-home-body>
-</div>
+<app-main-content></app-main-content>
 <app-footer></app-footer>
