--- a/src/app/component/dashboard/home/main-content/main-content.component.html
+++ b/src/app/component/dashboard/home/main-content/main-content.component.html
@@ -1,2 +1,8 @@
+<app-home-landing-section></app-home-landing-section>
+<app-experience-difference-section></app-experience-difference-section>
+<app-mobile-app-section></app-mobile-app-section>
+<app-find-your-path-section></app-find-your-path-section>
+<app-our-offer-section></app-our-offer-section>
 <app-about-us></app-about-us>
 <app-testimonial-section></app-testimonial-section>
+<app-start-now-section></app-start-now-section>
