adjusting responsive design of home

--- a/src/app/component/dashboard/header/header.component.html
+++ b/src/app/component/dashboard/header/header.component.html
@@ -9,10 +9,10 @@
   <div class="nav-bar">
     <nav class="links-list">
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Our Team</a></li>
-        <li><a href="#">Whitepaper</a></li>
+        <li><a href="">Home</a></li>
+        <li><a href="">About</a></li>
+        <li><a href="">Our Team</a></li>
+        <li><a href="">Whitepaper</a></li>
       </ul>
     </nav>
   </div>
@@ -21,5 +21,12 @@
   <div class="buttons">
     <button class="contact-btn">Contact</button>
     <button class="wallet-btn">Connect Wallet</button>
+  </div>
+
+  <!-- Menu Toggle Button for Mobile -->
+  <div class="menu-toggle">
+    <span class="bar"></span>
+    <span class="bar"></span>
+    <span class="bar"></span>
   </div>
 </header>
