--- a/src/app/component/dashboard/home/main-content/home-landing-section/home-landing-section.component.html
+++ b/src/app/component/dashboard/home/main-content/home-landing-section/home-landing-section.component.html
@@ -1,41 +1,45 @@
 <!-- Landing section -->
+
 <div class="home">
-  <div class="info-wrapper">
-    <div class="glass-section info-section">
-      <h1>Experience the Difference in Dental Care</h1>
-      <p>
-        From preventive check-ups to advanced cosmetic dentistry, our
-        experienced team is here to ensure you have a healthy, beautiful
-        smile. Schedule an appointment today and experience dental care that
-        truly makes you smile!
-      </p>
-      <div class="happy-patients">
-        <div class="patient-images">
-          <img src="images/happy_1.jpg" alt="Patient 1">
-          <img src="images/happy_2.jpg" alt="Patient 2">
-          <img src="images/happy_3.jpg" alt="Patient 3">
+  <div class="content-wrapper">
+    <div class="info-wrapper">
+      <div class="glass-section info-section">
+        <h1>Experience the Difference in Dental Care</h1>
+        <p>
+          From preventive check-ups to advanced cosmetic dentistry, our <br>
+          experienced team is here to ensure you have a healthy, beautiful
+          smile. <br>Schedule an appointment today and experience dental care that
+          truly makes you smile!
+        </p>
+        <div class="happy-patients">
+          <div class="patient-images">
+            <img src="images/happy_1.jpg" alt="Patient 1">
+            <img src="images/happy_2.jpg" alt="Patient 2">
+            <img src="images/happy_3.jpg" alt="Patient 3">
+          </div>
+          <p><strong>100K+</strong> <br> Happy Patients</p>
         </div>
-        <p><strong>100K+</strong> <br> Happy Patients</p>
       </div>
     </div>
-  </div>
 
-  <div class="stats-wrapper">
-    <div class="glass-section stats-section">
-      <div class="stats">
-        <div class="stat-item">
-          <p>20+</p> <br> Dentists
-        </div>
-        <div class="stat-item">
-          <p>95%</p> <br> Patient Satisfaction
-        </div>
-        <div class="stat-item">
-          <p>1K+</p> <br> Patients
-        </div>
-        <div class="stat-item">
-          <p>10+</p> <br> Clinic Branches
+    <div class="stats-wrapper">
+      <div class="glass-section stats-section">
+        <div class="stats">
+          <div class="stat-item">
+            <p>20+</p> <br> Dentists
+          </div>
+          <div class="stat-item">
+            <p>95%</p> <br> Patient Satisfaction
+          </div>
+          <div class="stat-item">
+            <p>1K+</p> <br> Patients
+          </div>
+          <div class="stat-item">
+            <p>10+</p> <br> Clinic Branches
+          </div>
         </div>
       </div>
     </div>
   </div>
 </div>
+
