--- a/src/app/component/dashboard/home/main-content/start-now-section/start-now-section.component.html
+++ b/src/app/component/dashboard/home/main-content/start-now-section/start-now-section.component.html
@@ -1,12 +1,16 @@
   <!-- start-now -->
+   
   <section class="start-now-section">
-    <div class="contento">
-      <h1>Start Your Healing Today</h1>
-      <p>
-        It’s never too early or too late to seek help. Our specialists are here to guide you every step of the way.
-      </p>
-    </div>
-    <div class="cta-button">
-      <a href="#" class="read-more">Schedule</a>
+    <div class="start-wrapper">
+      <div class="contento">
+        <h1>Start Your Healing Today</h1>
+        <p>
+          It’s never too early or too late to seek help. <br>Our specialists are here to guide you every step of the way.
+        </p>
+      </div>
+      <div class="cta-button">
+        <a href="#" class="read-more">Schedule</a>
+      </div>
     </div>
   </section>
+
