--- a/src/app/component/dashboard/home/main-content/mobile-app-section/mobile-app-section.component.css
+++ b/src/app/component/dashboard/home/main-content/mobile-app-section/mobile-app-section.component.css
@@ -1,31 +1,46 @@
 /* mobile-app */
+
 .app-container {
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+}
+
+.app-wrapper{
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
   padding: 40px;
   gap: 40px;
+  flex-wrap: wrap;
+}
+
+.app-content-wrapper{
+  height: 100%;
+  display: flex;
+  align-self: center;
 }
 
 .content {
   max-width: 600px;
+  flex: 1 1 300px;
 }
 
 h1 {
-  font-size: 32px;
+  font-size: 2rem;
   color: #333;
   margin-bottom: 20px;
 }
 
 .tagline {
-  font-size: 18px;
+  font-size: 1.125rem;
   color: #5c5c5c;
   font-weight: bold;
   margin-bottom: 20px;
 }
 
 .description {
-  font-size: 16px;
+  font-size: 1rem;
   color: #555;
   line-height: 1.6;
   margin-bottom: 20px;
@@ -35,17 +50,88 @@ h1 {
   display: flex;
   gap: 20px;
   margin-top: 20px;
+  flex-wrap: wrap;
 }
 
 .store-buttons img {
   width: 150px;
+  max-width: 100%;
   cursor: pointer;
 }
 
-.app-preview img {
-  max-width: 300px;
-  border-radius: 20px;
-  /* box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); */
+.app-preview {
+  flex: 1 1 300px;
+  text-align: center;
 }
 
-/* ***************************************************************************************************************************** */
+.app-preview img {
+  max-width: 75%;
+  height: auto;
+}
+
+@media (max-width: 1024px) {
+  .app-container {
+    gap: 20px;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  h1 {
+    font-size: 1.8rem;
+  }
+
+  .tagline {
+    font-size: 1rem;
+  }
+
+  .description {
+    font-size: 0.9rem;
+  }
+
+  .store-buttons {
+    justify-content: center;
+  }
+
+  .store-buttons img {
+    width: 120px;
+  }
+
+  .app-preview img {
+    max-width: 25%;
+  }
+}
+
+@media (max-width: 768px) {
+  .app-container {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .content {
+    max-width: 100%;
+  }
+
+  h1 {
+    font-size: 1.5rem;
+  }
+
+  .store-buttons {
+    justify-content: center;
+  }
+}
+
+@media (max-width: 480px) {
+  h1 {
+    font-size: 1.2rem;
+  }
+
+  .description {
+    font-size: 0.85rem;
+  }
+
+  .store-buttons img {
+    width: 100px;
+  }
+}
