--- a/src/app/component/dashboard/home/main-content/our-offer-section/our-offer-section.component.css
+++ b/src/app/component/dashboard/home/main-content/our-offer-section/our-offer-section.component.css
@@ -1,11 +1,12 @@
 /* our-offer-section */
+
 .our-offer {
   text-align: center;
   padding: 5rem 1rem;
 }
 
 .our-offer h2 {
-  color: #007b55;
+  color: #4E34CF;
   font-size: 46px;
   margin-bottom: 10px;
   text-transform: uppercase;
@@ -28,6 +29,7 @@
   justify-content: center;
   gap: 30px;
   flex-wrap: wrap;
+  backdrop-filter: blur(7px);
 
 }
 
@@ -42,18 +44,31 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  position: relative; /* Important for pseudo-element positioning */
+}
+
+.cardo::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: inherit; 
+  filter: blur(6px);
+  z-index: -1;
 }
 
 .first{
-  background: url('/images/card1-img.png') center / cover;
+  background: url('/images/menta1.jpg') center / cover;
 }
 
 .second{
-  background: url('/images/card2-img.png') center / cover;
+  background: url('/images/menta1.jpg') center / cover;
 }
 
 .third{
-  background: url('/images/card3-img.png') center / cover;
+  background: url('/images/menta1.jpg') center / cover;
 }
 
 .cardo:hover {
@@ -62,6 +77,8 @@
 }
 
 .cardo-content {
+  position: relative;
+  z-index: 1;
   padding: 20px;
   text-align: left;
 }
@@ -73,17 +90,18 @@
 }
 
 .cardo-content p {
-  font-size: 14px;
-  color: #555;
+  font-size: 15px;
+  color: rgb(255, 255, 255);
+  font-weight: 400;
   margin-bottom: 45px;
 }
 
 .read-more {
   display: inline-block;
   padding: 8px 16px;
-  border: 2px solid #007b55;
+  border: 2px solid #4E34CF;
   border-radius: 5px;
-  color: #007b55;
+  color: #4E34CF;
   text-decoration: none;
   font-weight: bold;
   font-size: 14px;
@@ -93,15 +111,10 @@
 }
 
 .read-more:hover {
-  background-color: #007b55;
-  color: #ffffff;
+  background-color: #4E34CF;
+  color: floralwhite;
   transform: scale(1.05);
   text-decoration: none;
-}
-
-.cardo-image img {
-  max-width: 100%;
-  height: auto;
 }
 
 /* Responsive Design */
@@ -115,6 +128,3 @@
       max-width: 90%;
   }
 }
-
-
-/* *************************************************************************************************** */
