--- a/src/app/component/auth/new-password/new-password.component.css
+++ b/src/app/component/auth/new-password/new-password.component.css
@@ -18,9 +18,9 @@
     height: 100vh;
 }
 
-/* h1{
-  margin-bottom: 12px;
-} */
+h1{
+margin-bottom: 35px;
+}
 
 .container{
     background-color: #fff;
@@ -30,7 +30,8 @@
     overflow: hidden;
     width: 425px;
     max-width: 100%;
-    min-height: 450px;
+    min-height: 485px;
+    /* max-height: 500px; */
 }
 
 .container span{
@@ -57,7 +58,7 @@
     font-weight: 600;
     letter-spacing: 0.5px;
     text-transform: uppercase;
-    margin-top: 70px;
+    margin-top: 30px;
     cursor: pointer;
 }
 
@@ -74,7 +75,7 @@
 .container input{
     background-color: #eee;
     border: none;
-    margin: 8px 0;
+    margin: 16px 0;
     padding: 10px 15px;
     font-size: 13px;
     border-radius: 8px;
