--- a/src/app/component/auth/new-password/new-password.component.html
+++ b/src/app/component/auth/new-password/new-password.component.html
@@ -9,9 +9,18 @@
                   <span *ngIf="userForm.controls['password'].errors?.['pattern']">Password must contain at least one uppercase letter, one lowercase letter, one digit, and one special character</span>
               </div>
       <span>Confirm Password</span>
-      <input type="password" name="password" placeholder="Confirm Your Password" formControlName="password">
-              <div class="text-danger" *ngIf="userForm.controls['password'].invalid && (userForm.controls['password'].touched || userForm.controls['password'].dirty)">
-              </div>
+      <input
+          type="password"
+          name="confirmPassword"
+          placeholder="Confirm Your Password"
+          formControlName="confirmPassword"
+        >
+        <div
+          class="text-danger"
+          *ngIf="userForm.controls['confirmPassword'].touched && userForm.hasError('passwordMismatch')">
+          <span>Passwords do not match</span>
+        </div>
+
       <button type="submit">
         Continue
       </button>
