--- a/src/app/component/auth/doctor-info/doctor-info.component.css
+++ b/src/app/component/auth/doctor-info/doctor-info.component.css
@@ -17,7 +17,7 @@
 }
 
 h1 {
-  margin-bottom: 30px;
+  margin: 20px 0;
 }
 
 .container {
@@ -38,8 +38,7 @@ h1 {
 .container span {
   font-size: 14px;
   font-weight: bolder;
-  margin-bottom: 0;
-  margin-top: 10px;
+  margin: 20px 0 10px;
   align-self: start;
   color: #2d333a;
 }
@@ -48,12 +47,16 @@ h1 {
 .container .gender {
   background-color: #eee;
   border: none;
-  margin: 10px 0 6px;
+  /* margin: 10px 0 6px; */
   padding: 10px 15px;
   font-size: 13px;
   border-radius: 8px;
   width: 100%;
   outline: none;
+}
+
+.container input:focus {
+  border: 2px solid #4e34cf;
 }
 
 .container button {
@@ -92,9 +95,9 @@ h1 {
   width: 100%;
 }
 
-/* .text-danger {
-  margin-bottom: 8px;
-} */
+.text-danger {
+  margin-top: 2px;
+}
 
 .text-danger span {
   color: red;
@@ -104,7 +107,7 @@ h1 {
 .gender {
   display: flex;
   justify-content: space-between;
-  margin-top: 10px;
+  /* margin-top: 10px; */
 }
 
 .gender-option {
