--- a/src/app/component/seravian-bot/seravian-bot.component.html
+++ b/src/app/component/seravian-bot/seravian-bot.component.html
@@ -27,6 +27,14 @@
       <!-- chatbox body part -->
 
       <div class="chat-body">
+
+        <div class="user-message">
+          <div class="user-message-text message-text">
+            Hello bot 👋 <br />
+          </div>
+        </div>
+        
+
         <div class="bot-message">
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -45,6 +53,7 @@
             How Can I Help You ?
           </div>
         </div>
+
       </div>
 
       <!-- chatbox footer part -->
