--- a/src/app/component/seravian-bot/seravian-bot.component.html
+++ b/src/app/component/seravian-bot/seravian-bot.component.html
@@ -33,7 +33,7 @@
             Hello bot 👋 <br />
           </div>
         </div>
-        
+
 
         <div class="bot-message">
           <svg
@@ -59,7 +59,7 @@
       <!-- chatbox footer part -->
 
       <div class="chat-footer">
-        <form action="#" class="form-ofchat">
+        <form action="" class="form-ofchat">
           <textarea placeholder="Message..." class="message-field"></textarea>
           <div class="chat-controls">
             <button
@@ -71,7 +71,7 @@
             </button>
             <div class="file-upload-cover">
               <input type="file" accept="images/*" id="get-file" hidden />
-              <img src="#" />
+              <img src="" />
               <button
                 type="button"
                 id="file-upload"
@@ -87,6 +87,10 @@
                 close
               </button>
             </div>
+
+            <button type="button" id="record-audio" class="material-symbols-rounded">
+              mic
+            </button>
 
             <button
               type="submit"
