--- a/src/app/component/dashboard/header/header.component.html
+++ b/src/app/component/dashboard/header/header.component.html
@@ -2,7 +2,8 @@
 <header class="header">
   <!-- Logo -->
   <div class="logo">
-    <img src="images/logo.png" alt="logo" class="logo-image">
+    <!-- <img src="images/logo.png" alt="logo" class="logo-image"> -->
+    <h2>Seravian</h2>
   </div>
 
   <!-- Navigation Bar -->
