--- a/src/app/component/dashboard/home/main-content/experience-difference-section/experience-difference-section.component.css
+++ b/src/app/component/dashboard/home/main-content/experience-difference-section/experience-difference-section.component.css
@@ -20,7 +20,7 @@
 .section-title {
   font-size: 2.5rem;
   font-weight: bold;
-  color: #333;
+  color: #4e34cf;
   margin-bottom: 10px;
 }
 
@@ -78,3 +78,5 @@
 .card-link:hover {
   color: #2e1ea6;
 }
+
+
